--- a/angular.json
+++ b/angular.json
@@ -46,15 +46,28 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/plugins/bootstrap-grid.css",
+              "src/assets/css/plugins/swiper.min.css",
+              "src/assets/css/plugins/fancybox.min.css",
+              "src/assets/css/plugins/font-awesome.min.css",
+              "src/assets/css/style04c1.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/plugins/jquery.min.js",
+              "src/assets/js/plugins/swup.min.js",
+              "src/assets/js/plugins/swiper.min.js",
+              "src/assets/js/plugins/fancybox.min.js",
+              "src/assets/js/plugins/gsap.min.js",
+              "src/assets/js/plugins/smooth-scroll.js",
+              "src/assets/js/plugins/ScrollTrigger.min.js",
+              "src/assets/js/plugins/ScrollTo.min.js",
+              "src/assets/js/main.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -104,15 +117,28 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/plugins/bootstrap-grid.css",
+              "src/assets/css/plugins/swiper.min.css",
+              "src/assets/css/plugins/fancybox.min.css",
+              "src/assets/css/plugins/font-awesome.min.css",
+              "src/assets/css/style04c1.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/plugins/jquery.min.js",
+              "src/assets/js/plugins/swup.min.js",
+              "src/assets/js/plugins/swiper.min.js",
+              "src/assets/js/plugins/fancybox.min.js",
+              "src/assets/js/plugins/gsap.min.js",
+              "src/assets/js/plugins/smooth-scroll.js",
+              "src/assets/js/plugins/ScrollTrigger.min.js",
+              "src/assets/js/plugins/ScrollTo.min.js",
+              "src/assets/js/main.js"
+            ]
           }
         }
       }
